syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    This table contains a ticker level summary of some earnings related information.  This information is also available in other records but is collected here for convenience.
*/    
message StockDetail {
    message PKey {
        
        TickerKey ticker = 10;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    float e_move = 100; // implied earnings move (from LiveSurfaceTerm.eMove)
    float e_move_hist = 103; // average historical (trail 8 quarter) earnings move (from LiveSurfaceTerm.eMoveHist)
    int32 next_earn_days = 106; // estimated days to next earnings event (resets to next event immediately after earnings passes)
    int32 near_earn_days = 109; // estimated days to next earnings event (resets to next event 2 days after the most recent event has passed)
    string next_earn_time = 112; // estimated time of day of next earnings event
    DateKey next_earn_date = 115; // estimated next earnings date (note that implied adjustements to this day are available in LiveSurfaceTerm)
    YesNo is_next_earn_date_confirmed = 118; // next date has been confirmed (usually by the company)
    float next_dDiv_amt = 121; // next dividend payment amount
    int32 next_dDiv_days = 124; // next dividend payment date
    int32 num_options = 127; // number of listed options on this underlier (if any)
    google.protobuf.Timestamp timestamp = 130;
}


